Fix tooltips in popovers getting clipped

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1047,7 +1047,7 @@ i {
         border: $borderEl;
         background: white;
         box-shadow: $shadowSoft;
-        overflow: hidden;
+        // overflow: hidden;
     }
     &.theme-dark {
         background: none;
